RedHat has a capital H

--- a/nagios/nrpe/map.jinja
+++ b/nagios/nrpe/map.jinja
@@ -3,7 +3,7 @@
         'pkgs': ['nagios-nrpe', 'nagios-nrpe-plugin', ],
         'service': 'nrpe',
     },
-    'Redhat': {
+    'RedHat': {
       'pkgs': ['nrpe', 'nagios-plugins-nrpe', ],
       'service': 'nrpe',
     },
